<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.keyless_access.KeylessAccessFragment"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <com.example.ttk_20.ui.custom_views.CenteredTitleToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/tv_home" >

        <ImageView
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_settings"/>
    </com.example.ttk_20.ui.custom_views.CenteredTitleToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="126dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:padding="16dp"
            android:background="@drawable/bg_card">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_door"
                    android:visibility="invisible"/>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/progressBar"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:lottie_autoPlay="true"
                    app:lottie_colorFilter="@color/green"
                    app:lottie_rawRes="@raw/door"
                    app:lottie_speed="0.5" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body1"
                android:text="@string/tv_entrance"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Caption1"
                android:text="@string/tv_open"
                android:textColor="@color/colorSenary"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnGetQr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:layout_marginStart="16dp"
            android:padding="16dp"
            android:background="@drawable/bg_card">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:src="@drawable/ic_qr"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body1"
                android:text="@string/tv_qr"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Caption1"
                android:text="@string/tv_qr_description"
                android:textColor="@color/colorSecondary"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>