<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.qr.QrCodeBottomSheetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="12dp"
            android:src="@drawable/ic_close" />

        <TextView
            style="@style/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:text="@string/tv_settings" />

        <TextView
            android:id="@+id/btnShareQr"
            style="@style/body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/colorSenary"
            android:layout_gravity="center_vertical"
            android:text="@string/tv_share"/>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_qrbase"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_scan"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"/>

    <TextView
        style="@style/Caption1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/tv_use_qr"/>

</LinearLayout>