<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsBottomSheetFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:paddingVertical="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="12dp"/>

        <TextView
            style="@style/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_gravity="center_vertical"
            android:text="@string/tv_settings"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="19dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Subtitle1"
                android:layout_weight="1"
                android:paddingVertical="14dp"
                android:text="@string/tv_open_auto"
                android:layout_gravity="center_vertical"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchMaterial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Subtitle2"
            android:textColor="@color/colorTertiary"
            android:layout_marginTop="2dp"
            android:text="@string/tv_settings_description"/>

    </LinearLayout>

</LinearLayout>